--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "bin": {
     "ran": "dist/bin/index.js"
   },
+  "exports": {
+    ".": "./dist/index.js",
+    "./plugins/*": "./dist/plugins/*/index.js"
+  },
   "scripts": {
     "create": "ran create",
     "start": "node build.js -w -d",
@@ -38,13 +42,15 @@
     "@types/webpack-hot-middleware": "^2.25.9",
     "glob": "^10.4.5",
     "react": "^19.0.0",
+    "react-activation": "^0.13.0",
     "react-dom": "^19.0.0",
     "react-refresh": "^0.16.0",
-    "react-router": "^7.1.1",
+    "react-router": "^7.3.0",
     "typescript": "^5.7.2"
   },
   "peerDependencies": {
     "react": ">=19",
+    "react-activation": "^0.13.0",
     "react-dom": ">=19",
     "react-router": ">=7"
   }
