--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "module": "ES2020",
+    "module": "ESNext",
     "outDir": "./dist",
     "rootDir": "./src",
     "jsx": "react-jsx",
